# api/api.go
@@ -22,36 +22,41 @@ func NewApi(r *gin.Engine, cfg *config.Config, storage storage.StorageI, logger 
 
 	r.Use(customCORSMiddleware())
 
-	v1 := r.Group("/auth")
+	v1 := r.Group("/lms/api/auth")
 	// Login Api
 	v1.POST("/login", handler.Login)
 
 	// Register Api
 	v1.POST("/register", handler.Register)
-	v1.POST("/check_email", handler.CheckEmail)
-	v1.POST("/check_code", handler.CheckCode)
-	v1.POST("/send_exist_email", handler.SendCodeExistEmail)
-	v1.POST("/update_password", handler.UpdatePassword)
+	v1.POST("/checkEmail", handler.CheckEmail)
+	v1.POST("/checkCode", handler.CheckCode)
+	v1.POST("/sendExistEmail", handler.SendCodeExistEmail)
+	v1.POST("/updatePassword", handler.UpdatePassword)
 
-	r.POST("/user", handler.CreateUser)
-	r.GET("/user/:id", handler.GetByIdUser)
-	r.GET("/user", handler.GetListUser)
-	r.PUT("/user/:id", handler.UpdateUser)
-	r.DELETE("/user/:id", handler.DeleteUser)
+	v2 := r.Group("/lms/api")
 
-	r.POST("/role", handler.CreateRole)
-	r.GET("/role/:id", handler.GetByIdRole)
-	r.GET("/role", handler.GetListRole)
-	r.PUT("/role/:id", handler.UpdateRole)
-	r.DELETE("/role/:id", handler.DeleteRole)
+	v2.POST("/user", handler.CreateUser)
+	v2.GET("/user/:id", handler.GetByIdUser)
+	v2.GET("/user", handler.GetListUser)
+	v2.PUT("/user/:id", handler.UpdateUser)
+	v2.DELETE("/user/:id", handler.DeleteUser)
+	v2.GET("/students", handler.GetListStudents)
+	v2.GET("/mentors", handler.GetListMentors)
 
-	r.POST("/course", handler.CreateCourse)
-	r.GET("/course/:id", handler.GetByIdCourse)
-	r.GET("/course", handler.GetListCourse)
-	r.PUT("/course/:id", handler.UpdateCourse)
-	r.DELETE("/course/:id", handler.DeleteCourse)
-	r.POST("/photo_upload", handler.PhotoUpload)
-	r.GET("/photo/:id", handler.PhotoGet)
+	v2.POST("/role", handler.CreateRole)
+	v2.GET("/role/:id", handler.GetByIdRole)
+	v2.GET("/role", handler.GetListRole)
+	v2.PUT("/role/:id", handler.UpdateRole)
+	v2.DELETE("/role/:id", handler.DeleteRole)
+
+	v2.POST("/course", handler.CreateCourse)
+	v2.GET("/course/:id", handler.GetByIdCourse)
+	v2.GET("/course", handler.GetListCourse)
+	v2.PUT("/course/:id", handler.UpdateCourse)
+	v2.DELETE("/course/:id", handler.DeleteCourse)
+	v2.POST("/photoUpload", handler.PhotoUpload)
+	v2.GET("/photo/:id", handler.PhotoDownload)
+	v2.GET("/course/users", handler.CourseOfUsers)
 
 	url := ginSwagger.URL("swagger/doc.json")
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
