# api/docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/auth/check_code": {
+        "/lms/api/auth/checkCode": {
             "post": {
                 "description": "CheckCode",
                 "consumes": [
@@ -84,7 +84,7 @@
                 }
             }
         },
-        "/auth/check_email": {
+        "/lms/api/auth/checkEmail": {
             "post": {
                 "description": "CheckEmail",
                 "consumes": [
@@ -164,7 +164,7 @@
                 }
             }
         },
-        "/auth/login": {
+        "/lms/api/auth/login": {
             "post": {
                 "description": "Login",
                 "consumes": [
@@ -244,7 +244,7 @@
                 }
             }
         },
-        "/auth/register": {
+        "/lms/api/auth/register": {
             "post": {
                 "description": "Register",
                 "consumes": [
@@ -324,7 +324,7 @@
                 }
             }
         },
-        "/auth/send_exist_email": {
+        "/lms/api/auth/sendExistEmail": {
             "post": {
                 "description": "SendEmail",
                 "consumes": [
@@ -404,7 +404,7 @@
                 }
             }
         },
-        "/auth/update_password": {
+        "/lms/api/auth/updatePassword": {
             "post": {
                 "description": "UpdatePassword",
                 "consumes": [
@@ -484,7 +484,7 @@
                 }
             }
         },
-        "/course": {
+        "/lms/api/course": {
             "get": {
                 "description": "Get List Course",
                 "consumes": [
@@ -650,7 +650,84 @@
                 }
             }
         },
-        "/course/{id}": {
+        "/lms/api/course/users": {
+            "get": {
+                "description": "Get List Course Of Users",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Course"
+                ],
+                "summary": "Get List Course Of Users",
+                "operationId": "get_list_Course_of_users",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/lms/api/course/{id}": {
             "get": {
                 "security": [
                     {
@@ -903,7 +980,90 @@
                 }
             }
         },
-        "/photo/{id}": {
+        "/lms/api/mentors": {
+            "get": {
+                "description": "Get List Mentors",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get List Mentors",
+                "operationId": "get_list_mentors",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "offset",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/lms/api/photo/{id}": {
             "get": {
                 "description": "Photo Get",
                 "consumes": [
@@ -980,7 +1140,7 @@
                 }
             }
         },
-        "/photo_upload": {
+        "/lms/api/photoUpload": {
             "post": {
                 "description": "Photo Upload",
                 "consumes": [
@@ -1058,7 +1218,7 @@
                 }
             }
         },
-        "/role": {
+        "/lms/api/role": {
             "get": {
                 "description": "Get List Role",
                 "consumes": [
@@ -1224,7 +1384,7 @@
                 }
             }
         },
-        "/role/{id}": {
+        "/lms/api/role/{id}": {
             "get": {
                 "security": [
                     {
@@ -1477,7 +1637,90 @@
                 }
             }
         },
-        "/user": {
+        "/lms/api/students": {
+            "get": {
+                "description": "Get List Students",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get List Students",
+                "operationId": "get_list_students",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "offset",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/lms/api/user": {
             "get": {
                 "description": "Get List User",
                 "consumes": [
@@ -1499,6 +1742,12 @@
                         "type": "string",
                         "description": "limit",
                         "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "filter",
+                        "name": "filter",
                         "in": "query"
                     }
                 ],
@@ -1643,7 +1892,7 @@
                 }
             }
         },
-        "/user/{id}": {
+        "/lms/api/user/{id}": {
             "get": {
                 "security": [
                     {
@@ -1942,16 +2191,7 @@
         "models.CourseCreate": {
             "type": "object",
             "properties": {
-                "beginning_date_course": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
                 "duration": {
-                    "type": "string"
-                },
-                "end_date": {
                     "type": "string"
                 },
                 "for_who": {
@@ -1980,20 +2220,11 @@
                 "beginning_date_course": {
                     "type": "string"
                 },
-                "description": {
-                    "type": "string"
-                },
                 "duration": {
-                    "type": "string"
-                },
-                "end_date": {
                     "type": "string"
                 },
                 "for_who": {
                     "type": "string"
-                },
-                "grade": {
-                    "type": "integer"
                 },
                 "id": {
                     "type": "string"
